# consent-management

./: .gitignore  Cargo.toml  README.md
_mermaid/: api-gateway-architecture.md  audit-log-architecture.md  auth-service-architecture.md  database-schema.md  project-structure.md
docs/_mermaid/: consent-management-api.md  database-schema.md  notification-service-architecture.md  project-structure.md
migrations/: 01_create_initial_tables.sql  create_initial_tables.sql
src/: lib.rs  main.rs
src/api/: routes.rs
src/models/: user.rs
src/services/: audit_service.rs  auth_service.rs  notification.rs
src/utils/: database.rs
