[package]
name = "consent_management_system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
dotenv = "0.15"

[dev-dependencies]
actix-web-codegen = "4.0"
